[gd_scene load_steps=33 format=3 uid="uid://c1jbyokpnyq56"]

[ext_resource type="Script" path="res://scripts/Game.gd" id="1_l8p68"]
[ext_resource type="Script" path="res://scripts/ScrollingBackgrounds.gd" id="2_23gp1"]
[ext_resource type="Texture2D" uid="uid://c13v3ehk2sb26" path="res://assets/bg.png" id="2_mmgpb"]
[ext_resource type="Script" path="res://scripts/Hocus.gd" id="3_wokb6"]
[ext_resource type="Texture2D" uid="uid://w4gk6pgeaaq" path="res://assets/hocus.png" id="4_d0ihs"]
[ext_resource type="Script" path="res://scripts/Spellcaster.gd" id="5_lf06j"]
[ext_resource type="Script" path="res://scripts/Bar.gd" id="6_w0dqt"]
[ext_resource type="Script" path="res://scripts/Charges.gd" id="7_mij5q"]
[ext_resource type="AudioStream" uid="uid://bhmuniqa27rqr" path="res://assets/damaged_audio.mp3" id="7_yynrj"]
[ext_resource type="Script" path="res://scripts/Spawner.gd" id="8_66w8y"]
[ext_resource type="Script" path="res://scripts/Despawner.gd" id="9_s83qe"]
[ext_resource type="Script" path="res://scripts/ScoreLabel.gd" id="11_yuctv"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vlasy"]
radius = 8.0
height = 28.0

[sub_resource type="AtlasTexture" id="AtlasTexture_lxda4"]
atlas = ExtResource("4_d0ihs")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oy03o"]
atlas = ExtResource("4_d0ihs")
region = Rect2(0, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_54erg"]
atlas = ExtResource("4_d0ihs")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_81tje"]
atlas = ExtResource("4_d0ihs")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ias3k"]
atlas = ExtResource("4_d0ihs")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pte28"]
atlas = ExtResource("4_d0ihs")
region = Rect2(0, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvyvb"]
atlas = ExtResource("4_d0ihs")
region = Rect2(32, 32, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ps32l"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lxda4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oy03o")
}],
"loop": true,
"name": &"Fly",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_54erg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81tje")
}],
"loop": true,
"name": &"Idle",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ias3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pte28")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ias3k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvyvb")
}],
"loop": true,
"name": &"Walk",
"speed": 8.0
}]

[sub_resource type="Gradient" id="Gradient_ovmp3"]
offsets = PackedFloat32Array(0, 0.3)
colors = PackedColorArray(0.989797, 1, 0.604981, 1, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_aqd0e"]
colors = PackedColorArray(1, 0, 0, 1, 1, 1, 0, 1)

[sub_resource type="Gradient" id="Gradient_v38qb"]
colors = PackedColorArray(1, 1, 1, 0.584314, 1, 1, 1, 0)

[sub_resource type="Gradient" id="Gradient_6jywr"]
colors = PackedColorArray(0.233925, 0.233925, 0.233925, 1, 1, 1, 1, 1)

[sub_resource type="CanvasTexture" id="CanvasTexture_e8dgl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7cor7"]
bg_color = Color(0.235294, 0.235294, 0.235294, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_70852"]
bg_color = Color(0.980392, 1, 0.337255, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vww38"]
size = Vector2(256, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_m06dx"]
size = Vector2(35, 191)

[sub_resource type="LabelSettings" id="LabelSettings_ufewv"]
font_size = 42

[sub_resource type="LabelSettings" id="LabelSettings_p4m0h"]
font_size = 72

[node name="Game" type="Node2D" node_paths=PackedStringArray("score_label", "high_score_label")]
script = ExtResource("1_l8p68")
score_label = NodePath("CanvasLayer/MarginContainer/ScoreContainer/ScoreLabel")
high_score_label = NodePath("CanvasLayer/MarginContainer/HighScoreContainer/HighScoreLabel")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ScrollingBackgrounds" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_23gp1")
velocity = Vector2(-100, 0)
start_pos = Vector2(124, -63)

[node name="Background" type="TextureRect" parent="ScrollingBackgrounds"]
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_left = -130.0
offset_top = -63.0
offset_right = 126.0
offset_bottom = 65.0
texture = ExtResource("2_mmgpb")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "",
"source": "res://assets/bg.aseprite"
}

[node name="Background2" type="TextureRect" parent="ScrollingBackgrounds"]
texture_filter = 1
texture_repeat = 2
layout_mode = 0
offset_left = 126.0
offset_top = -63.0
offset_right = 382.0
offset_bottom = 65.0
texture = ExtResource("2_mmgpb")
metadata/_aseprite_wizard_config_ = {
"i_mode": 1,
"keep_anim_length": false,
"layer": "",
"o_ex_p": "",
"o_folder": "",
"o_name": "",
"only_visible": false,
"op_exp": false,
"player": "",
"source": "res://assets/bg.aseprite"
}

[node name="Hocus" type="CharacterBody2D" parent="."]
position = Vector2(-75, 45)
script = ExtResource("3_wokb6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hocus"]
shape = SubResource("CapsuleShape2D_vlasy")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Hocus"]
z_index = 1
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_ps32l")
animation = &"Walk"
autoplay = "Walk"
metadata/_aseprite_wizard_config_ = {
"layer": "",
"o_ex_p": "",
"o_folder": "res://assets",
"o_name": "",
"only_visible": false,
"op_exp": false,
"source": "res://assets/hocus.aseprite"
}

[node name="Flydust" type="CPUParticles2D" parent="Hocus"]
position = Vector2(-2, 11)
amount = 50
emission_shape = 3
emission_rect_extents = Vector2(7, 3)
gravity = Vector2(-600, 980)
orbit_velocity_min = -2.0
orbit_velocity_max = 1.0
angle_max = 720.0
scale_amount_max = 3.0
color_ramp = SubResource("Gradient_ovmp3")

[node name="Beam" type="CPUParticles2D" parent="Hocus"]
z_index = 1
position = Vector2(7, 1)
emitting = false
amount = 100
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(200, 0)
spread = 1.0
gravity = Vector2(0, 0)
initial_velocity_min = 200.0
initial_velocity_max = 200.0
scale_amount_max = 3.0
color_initial_ramp = SubResource("Gradient_aqd0e")

[node name="Smoke" type="CPUParticles2D" parent="Hocus"]
z_index = 1
position = Vector2(7, 1)
emitting = false
amount = 20
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(-0.5, -1)
spread = 20.0
gravity = Vector2(0, 0)
initial_velocity_min = 100.0
initial_velocity_max = 100.0
angle_max = 360.0
scale_amount_min = 2.0
scale_amount_max = 7.0
color_ramp = SubResource("Gradient_v38qb")
color_initial_ramp = SubResource("Gradient_6jywr")

[node name="Spellcaster" type="Node2D" parent="Hocus"]
position = Vector2(7, 2)
script = ExtResource("5_lf06j")

[node name="Timer" type="Timer" parent="Hocus/Spellcaster"]
wait_time = 2.0

[node name="AudioDamaged" type="AudioStreamPlayer2D" parent="Hocus"]
stream = ExtResource("7_yynrj")
volume_db = 18.0

[node name="Health" type="HBoxContainer" parent="Hocus"]
offset_left = -7.0
offset_top = -17.0
offset_right = 6.0
offset_bottom = -14.0
theme_override_constants/separation = 2
script = ExtResource("7_mij5q")
max_pips = 3
fill_color = Color(1, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Hocus/Health"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="TextureRect2" type="TextureRect" parent="Hocus/Health"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="TextureRect3" type="TextureRect" parent="Hocus/Health"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="FlydustBar" type="ProgressBar" parent="Hocus"]
offset_left = -20.0
offset_top = -9.0
offset_right = -17.0
offset_bottom = 9.0
size_flags_horizontal = 0
theme_override_styles/background = SubResource("StyleBoxFlat_7cor7")
theme_override_styles/fill = SubResource("StyleBoxFlat_70852")
value = 45.0
fill_mode = 3
show_percentage = false
script = ExtResource("6_w0dqt")

[node name="Charges" type="VBoxContainer" parent="Hocus"]
offset_left = -15.0
offset_top = -9.0
offset_right = -12.0
offset_bottom = 9.0
size_flags_horizontal = 0
size_flags_vertical = 8
theme_override_constants/separation = 2
script = ExtResource("7_mij5q")
max_pips = 4
fill_color = Color(1, 1, 1, 1)
flip_order = true

[node name="TextureRect" type="TextureRect" parent="Hocus/Charges"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="TextureRect2" type="TextureRect" parent="Hocus/Charges"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="TextureRect3" type="TextureRect" parent="Hocus/Charges"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="TextureRect4" type="TextureRect" parent="Hocus/Charges"]
custom_minimum_size = Vector2(3, 3)
layout_mode = 2
texture = SubResource("CanvasTexture_e8dgl")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(-120, 68)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2(118, 0)
shape = SubResource("RectangleShape2D_vww38")

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2(-120, -74)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceiling"]
position = Vector2(118, 0)
shape = SubResource("RectangleShape2D_vww38")

[node name="Spawner" type="Node2D" parent="."]
position = Vector2(144, 53)
script = ExtResource("8_66w8y")

[node name="Timer" type="Timer" parent="Spawner"]
wait_time = 2.0
autostart = true

[node name="Despawner" type="Area2D" parent="."]
position = Vector2(-166, -43)
script = ExtResource("9_s83qe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawner"]
position = Vector2(-4.5, 38.5)
shape = SubResource("RectangleShape2D_m06dx")

[node name="Despawner2" type="Area2D" parent="."]
position = Vector2(201, -40)
script = ExtResource("9_s83qe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawner2"]
position = Vector2(-4.5, 38.5)
shape = SubResource("RectangleShape2D_m06dx")

[node name="Despawner3" type="Area2D" parent="."]
position = Vector2(29, 232)
rotation = 1.56781
scale = Vector2(1.19313, 6.31466)
script = ExtResource("9_s83qe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Despawner3"]
position = Vector2(-4.5, 38.5)
shape = SubResource("RectangleShape2D_m06dx")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScoreContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="ScoreText" type="Label" parent="CanvasLayer/MarginContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "SCORE"
label_settings = SubResource("LabelSettings_ufewv")
script = ExtResource("11_yuctv")

[node name="ScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/ScoreContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_ufewv")
script = ExtResource("11_yuctv")

[node name="HighScoreContainer" type="VBoxContainer" parent="CanvasLayer/MarginContainer"]
layout_mode = 2

[node name="HighScoreText" type="Label" parent="CanvasLayer/MarginContainer/HighScoreContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "HIGH SCORE"
label_settings = SubResource("LabelSettings_ufewv")
script = ExtResource("11_yuctv")

[node name="HighScoreLabel" type="Label" parent="CanvasLayer/MarginContainer/HighScoreContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0
text = "0"
label_settings = SubResource("LabelSettings_ufewv")
script = ExtResource("11_yuctv")

[node name="Pause" type="Panel" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CanvasLayer/Pause"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "PAUSED"
label_settings = SubResource("LabelSettings_p4m0h")
horizontal_alignment = 1

[node name="Quit" type="Button" parent="CanvasLayer/Pause"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 0
offset_left = 372.0
offset_top = 438.0
offset_right = 772.0
offset_bottom = 558.0
theme_override_font_sizes/font_size = 52
text = "QUIT"

[node name="GameOver" type="PanelContainer" parent="CanvasLayer"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOver"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="CanvasLayer/GameOver/VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_p4m0h")
horizontal_alignment = 1

[node name="HighScore" type="Label" parent="CanvasLayer/GameOver/VBoxContainer"]
visible = false
layout_mode = 2
text = "NEW HIGH SCORE!"
label_settings = SubResource("LabelSettings_p4m0h")
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/GameOver/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="ScoreText" type="Label" parent="CanvasLayer/GameOver/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "SCORE: "
label_settings = SubResource("LabelSettings_p4m0h")
horizontal_alignment = 1

[node name="Score" type="Label" parent="CanvasLayer/GameOver/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "0"
label_settings = SubResource("LabelSettings_p4m0h")
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="CanvasLayer/GameOver/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 10

[node name="PlayAgain" type="Button" parent="CanvasLayer/GameOver/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "PLAY AGAIN"

[node name="Quit" type="Button" parent="CanvasLayer/GameOver/VBoxContainer/Buttons"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 2
theme_override_font_sizes/font_size = 52
text = "QUIT"

[connection signal="score_updated" from="." to="CanvasLayer/MarginContainer/ScoreContainer/ScoreLabel" method="update_text"]
[connection signal="died" from="Hocus" to="." method="_on_hocus_died"]
[connection signal="flydust_changed" from="Hocus" to="Hocus/FlydustBar" method="_on_value_changed"]
[connection signal="health_changed" from="Hocus" to="Hocus/Health" method="set_pips"]
[connection signal="charges_changed" from="Hocus/Spellcaster" to="Hocus/Charges" method="set_pips"]
[connection signal="area_entered" from="Despawner" to="Despawner" method="_on_body_entered"]
[connection signal="body_entered" from="Despawner" to="Despawner" method="_on_body_entered"]
[connection signal="area_entered" from="Despawner2" to="Despawner2" method="_on_body_entered"]
[connection signal="body_entered" from="Despawner2" to="Despawner2" method="_on_body_entered"]
[connection signal="area_entered" from="Despawner3" to="Despawner3" method="_on_body_entered"]
[connection signal="body_entered" from="Despawner3" to="Despawner3" method="_on_body_entered"]
